@@ -4,14 +4,16 @@ Cacti CHANGELOG
 -bug#0001105: add_graphs.php --list-snmp-values for all available host snmp-fields
 -bug#0001125: XML parse error on template import with degree symbol 
 -bug#0001147: Cactid doesn't trim white space from data template OIDs
--bug#0001159: Template names are confusing/archaic.
+-bug#0001159: Template names are confusing/archaic (Graph, Data Templates, Data Queries are renamed).
 -bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
 -bug#0001182: Subdirectories are not secure and allow browsing
+-bug#0001279: php warning when installing specific plugins (if no "keys" were defined for a plugin table)
 -bug#0001306: Empty COMMENT + <HR> gives you a blank legend line (was: Add Blank Line to Graph via Pull down menu)
 -bug#0001335: <oid_index_parse> does not work as expected; requires changes to XML for e.g. EMC Cellera
 -bug#0001354: 0.8.7c to 0.8.8 update script bugs
 -bug#0001359: Better error checking in rrd.php
--bug#0001366: Exported data templates do not import the special characters properly 
+-bug#0001366: Exported data templates do not import the special characters properly
+-bug#0001428: segfault when database tables not present
 -bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
 -bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
 -bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template 
@@ -19,6 +21,7 @@ Cacti CHANGELOG
 -bug#0001506: Reindexing fails in snmp.php
 -bug#0001522: Special(?) charakters break parsing of template data.
 -bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
+-bug#0001532: Various crashes in early stages of installation with no database populated.
 -bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
 -bug#0001549: Database crashes with use of array_to_sql_or
 -bug: remove graph permissions if graph is removed
